deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-1 
  labels:
    namespace: default
    app: flask-1 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-pod 
  template:
    metadata:
      labels:
        namespace: default
        app: flask-pod 
        version: v1
    spec:
      containers:
        - name: flask-1
          imagePullPolicy: Always
          image: app:flask1
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: lbservice
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    namespace: default
    app: flask-pod
